objects/Area__c.object
<CustomObject>
    <description>The geographic areas defined by each program.</description>
    <fields>
        <fullName>AcreageAmount__c</fullName>
        <description>The number of acres included in this expansion zone.</description>
        <inlineHelpText>The number of acres included in this expansion zone.</inlineHelpText>
        <label>Acreage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AreaAddressRangeSummary__c</fullName>
        <description>Number of address ranges in this area, if defined by address range.</description>
        <inlineHelpText>Number of address ranges in this area, if defined by address range.</inlineHelpText>
        <label>Number of Address Ranges</label>
        <summaryForeignKey>AreaAddressRange__c.Area__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AreaComponentCountFormula__c</fullName>
        <description>The number of items in this area&apos;s definitions. For example, if this area is defined by state and the number shown is 51, then there are 51 states in this area.</description>
        <formula>AreaStateSummary__c +  
AreaCountySummary__c  +  
AreaCountrySummary__c  +  
AreaZipCodeSummary__c  +  
AreaAddressRangeSummary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of items in this area&apos;s definitions. For example, if this area is defined by state and the number shown is 51, then there are 51 states in this area.</inlineHelpText>
        <label>Area Component Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AreaCountrySummary__c</fullName>
        <description>Number of countries in this area, if defined by country.</description>
        <inlineHelpText>Number of countries in this area, if defined by country.</inlineHelpText>
        <label>Number of Countries</label>
        <summaryForeignKey>AreaCountry__c.Area__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AreaCountySummary__c</fullName>
        <description>Number of counties in this area, if defined by county.</description>
        <inlineHelpText>Number of counties in this area, if defined by county.</inlineHelpText>
        <label>Number of Counties</label>
        <summaryForeignKey>AreaCounty__c.Area__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AreaDefinitionMethod__c</fullName>
        <description>The method by which we can determine whether an address is in this area.</description>
        <inlineHelpText>The method by which we can determine whether an address is in this area.</inlineHelpText>
        <label>Area Definition Method</label>
        <picklist>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Equivalent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip/Postal Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explicit Address Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geospatial Polygon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AreaDescriptionText__c</fullName>
        <description>The description of an area</description>
        <inlineHelpText>The description of an area</inlineHelpText>
        <label>Area Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AreaEID__c</fullName>
        <description>The Enterprise ID for this area.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this area.</inlineHelpText>
        <label>Area EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AreaStateSummary__c</fullName>
        <description>The number of states in this area, if defined by state.</description>
        <inlineHelpText>The number of states in this area, if defined by state.</inlineHelpText>
        <label>Number of States</label>
        <summaryForeignKey>AreaState__c.Area__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AreaZipCodeSummary__c</fullName>
        <description>Number of zip codes in this area, if defined by zip code.</description>
        <inlineHelpText>Number of zip codes in this area, if defined by zip code.</inlineHelpText>
        <label>Number of Zip Codes</label>
        <summaryForeignKey>AreaZipCode__c.Area__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RemainingAcreageAmount__c</fullName>
        <description>Used for expansion areas</description>
        <inlineHelpText>Used for expansion areas</inlineHelpText>
        <label>Remaining Acreage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AreaEID__c</columns>
        <columns>NAME</columns>
        <columns>AreaDescriptionText__c</columns>
        <columns>AcreageAmount__c</columns>
        <columns>RemainingAcreageAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>